--- a/maven_02_dao/pom.xml
+++ b/maven_02_dao/pom.xml
@@ -7,6 +7,12 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
+  <parent>
+    <groupId>org.example</groupId>
+    <artifactId>maven_01_parent</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <relativePath>../maven_01_parent/pom.xml</relativePath>
+  </parent>
 
   <dependencies>
     <dependency>
