--- a/maven_02_pojo/pom.xml
+++ b/maven_02_pojo/pom.xml
@@ -4,4 +4,12 @@
   <groupId>org.example</groupId>
   <artifactId>maven_02_pojo</artifactId>
   <version>1.0-SNAPSHOT</version>
+
+  <parent>
+    <groupId>org.example</groupId>
+    <artifactId>maven_01_parent</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <relativePath>../maven_01_parent/pom.xml</relativePath>
+  </parent>
+
 </project>
