--- a/maven_03_service/pom.xml
+++ b/maven_03_service/pom.xml
@@ -3,14 +3,14 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.example</groupId>
-  <artifactId>maven_01_parent</artifactId>
+  <artifactId>maven_03_service</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
+  <packaging>jar</packaging>
 
-  <modules>
-    <module>../maven_02_pojo</module>
-    <module>../maven_02_dao</module>
-    <module>../maven_03_service</module>
-  </modules>
-
+  <parent>
+    <groupId>org.example</groupId>
+    <artifactId>maven_01_parent</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <relativePath>../maven_01_parent/pom.xml</relativePath>
+  </parent>
 </project>
