--- a/maven_03_service/pom.xml
+++ b/maven_03_service/pom.xml
@@ -13,4 +13,11 @@
     <version>1.0-SNAPSHOT</version>
     <relativePath>../maven_01_parent/pom.xml</relativePath>
   </parent>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.example</groupId>
+      <artifactId>maven_02_pojo</artifactId>
+    </dependency>
+  </dependencies>
 </project>
